<resources>
    <string name="app_name">Proximity Lock</string>
    <string name="settings_title">Settings</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="button_disable">DISABLE</string>
    <string name="button_enable">ENABLE</string>
    <string name="button_calibrate">CALIBRATE</string>
    <string name="calibrate">CALIBRATE</string>

    <string name="enabled_title">Proximity Lock enabled</string>
    <string name="timeout_title">Timeout (in milliseconds)</string>
    <string name="persistent_title">Persistent notification</string>
    <string name="calibration_title">Calibration</string>

    <string name="description">Proximity Lock allows the user to lock their device by simply tapping
    their finger on the proximity sensor (usually located adjacent to the earpiece).</string>
    <string name="calibrate_description">While holding a finger on your device\'s proximity sensor, press the button below.</string>
    <string name="calibrate_warning">WARNING: Calibrating without touching the sensor may cause problems.</string>
    <string name="calibrate_back">IF YOUR CALIBRATION IS CORRECT, PRESS THE BACK ARROW. IF NOT, RE-CALIBRATE.</string>
    <string name="value_description">Test value:</string>
    <string name="locking">LOCKING</string>
    <string name="not_locking">NOT LOCKING</string>

    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_calibration">Calibration</string>

    <string name="enabled_summary">Check the box to enable Proximity Lock</string>
    <string name="persistent_summary">Check the box to enable an app shortcut in your notification shade</string>
    <string name="timeout_summary">Change the time needed for the proximity sensor to lock your device</string>
    <string name="calibration_summary">Change the sensor value that triggers Proximity Lock</string>
    <string name="title_activity_instruction">InstructionActivity</string>

    <string name="intro_blurb">Every Android device is unique, so we need you to calibrate your proximity sensor.</string>
    <string name="point_blurb">The proximity sensor is usually located next to your device\'s earpiece.</string>
    <string name="locate_blurb">Use this screen to locate your proximity sensor.\n(This is the sensor\'s value in real-time)</string>
    <string name="calibrate_blurb">While touching the proximity sensor, press the calibrate button.</string>

</resources>
