<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <SwitchPreference
        android:key="enabled"
        android:title="@string/enabled_title"
        android:defaultValue="false"
        />
    <SwitchPreference
        android:key="persistent"
        android:title="@string/persistent_title"
        android:defaultValue="true"
    />
    <EditTextPreference
        android:key="timeout"
        android:title="@string/timeout_title"
        android:defaultValue="275"
        android:inputType="number"
        />
    <EditTextPreference
        android:key="calibration"
        android:title="@string/calibration_title"
        android:defaultValue="0.0"
        android:inputType="number"
        android:numeric="decimal"
        />
</PreferenceScreen>