<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/primary"
        android:elevation="4dp"
        app:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        />

    <TextView
        android:id="@+id/description"
        android:text="@string/description"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:maxWidth="400dp"
        android:layout_margin="40dp" />

    <Button
        android:id="@+id/enable"
        android:layout_width="104dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/description"
        android:text="@string/button_enable"
        android:layout_centerHorizontal="true"/>

    <Button
        android:layout_width="104dp"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:text="@string/calibrate"
        android:layout_alignParentBottom="true"
        android:id="@+id/calibrate"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
